--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "engines": {
-    "node": "14.x"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "start": "node app.js",
