--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.5",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -25,8 +26,6 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "node-fetch": "^2.7.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
     "uuid": "^8.0.0"
   }
 }
